<resources>
    <string name="app_name">SaladBar</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_add_order">Add order</string>
    <string name="action_delete_order">Delete</string>

    <string name="action_settings">Settings</string>

    <string name="your_order">Your Order</string>
    <string name="total">Total:</string>
    <string name="total_amount">0.0</string>
    <string name="place_order">Place Order</string>
    <string name="order_date">Mon-Day-Year</string>
    <string name="order_time">12:00</string>
    <string name="confirmation_number">12345</string>
    <string name="order_number">1</string>
    <string name="order_name">Order Name</string>
    <string name="order_ingredients">Ingredients</string>
    <string name="order_price">$price</string>
    <string name="hash">#</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="title_activity_salad_bar_host">SaladBarHostActivity</string>
    <string name="progress_message">Placing order...</string>
    <string name="title">Salad Bar</string>
    <string name="toast_empty_salad">Bowl is empty. Please add ingredients.</string>
    <string name="toast_no_base">You have not chosen a base ingredient yet.</string>
    <string name="toast_empty_order">Your order is empty.</string>
    <string name="title_activity_restaurant_selector">Choose Restaurant</string>

    <string name="hello_world">Hello world!</string>

</resources>
