<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_confirmation"
            android:id="@+id/textView_confirmation"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_date"
            android:id="@+id/textView_order_date"
            android:textColor="@color/green"
            android:layout_marginLeft="25dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_time"
            android:id="@+id/textView_order_time"
            android:layout_marginRight="25dp"
            android:textColor="@color/green"
            android:layout_alignTop="@+id/textView_order_date"
            android:layout_alignParentRight="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmation_number"
            android:id="@+id/textView_confirmation_number"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/red"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hash"
            android:id="@+id/textView2"
            android:layout_centerVertical="true"
            android:textColor="@color/red"
            android:layout_toLeftOf="@+id/textView_confirmation_number"
            android:layout_toStartOf="@+id/textView_confirmation_number" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/id_from_your_LinearLayout"
        android:background="@drawable/shadow"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        xmlns:android="http://schemas.android.com/apk/res/android">
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:layout_marginLeft="10dp"
        >

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listView" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/id_from_your_LinearLayout"
        android:background="@drawable/shadow"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        xmlns:android="http://schemas.android.com/apk/res/android">
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            android:id="@+id/textView_order_total_amount"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:id="@+id/textView_order_total"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/textView_order_total_amount"
            android:layout_toStartOf="@+id/textView_order_total_amount"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="16dp"/>
    </RelativeLayout>
</LinearLayout>