<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <View
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/view">
        </View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="x"
            android:textSize="24sp"
            android:textColor="@color/red"
            android:layout_marginLeft="10dp"
            android:id="@+id/textView_salad_delete"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:id="@+id/textView_salad_name"
            android:layout_toRightOf="@id/textView_salad_delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_price"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginRight="10dp"
            android:id="@+id/textView_salad_price"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_ingredients"
            android:textSize="12sp"
            android:layout_marginLeft="10dp"
            android:id="@+id/textView_salad_ingredients"
            android:layout_below="@+id/textView_salad_name"
            android:layout_toRightOf="@id/textView_salad_delete" />



    </RelativeLayout>
