<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_order"
            android:id="@+id/textView"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:textSize="20dp"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/id_from_your_LinearLayout"
        android:background="@drawable/shadow"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        xmlns:android="http://schemas.android.com/apk/res/android">
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:layout_marginLeft="10dp"
        >

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:id="@+id/listView" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/id_from_your_LinearLayout"
        android:background="@drawable/shadow"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        xmlns:android="http://schemas.android.com/apk/res/android">
    </View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            android:id="@+id/textView_order_total_amount"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/textView_order_total_amount"
            android:layout_toStartOf="@+id/textView_order_total_amount"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="16dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20">

        <!--<Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_order"
            android:id="@+id/button_place_order"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"/>-->
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_order"
            android:id="@+id/button_place_order"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"/>
    </RelativeLayout>
</LinearLayout>